@@ -1,3 +1,6 @@
+    * Split out info packages from jobs even when RPM capsules are
+      used (CNY-3387)
+
 Changes in 2.1.14:
   o Bug Fixes:
     * Disable diff/patch merging for RPM config files (CNY-3399)
